added MDX queries (3_1 working, rest not working)

--- a/BI_Projects/BI_62/docker-compose.yml
+++ b/BI_Projects/BI_62/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:8.0.31
     hostname: bi-mysql-db
     container_name: bi_mysql_db
-    restart: no
+    restart: on-failure
     environment:
       MYSQL_ROOT_PASSWORD: 'test123'
     ports:
